--- a/videoproj/package.json
+++ b/videoproj/package.json
@@ -1,16 +1,17 @@
 {
   "name": "angularvideo",
   "version": "1.0.0",
-  "description": "angularvideo app",  
+  "description": "angularvideo app",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "artemderzkiy",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.3.12"    
+    "angular": "^1.3.12"
   },
-"devDependencies": {    
+  "devDependencies": {
+    "angular-ui-mask": "^1.8.7",
     "browserify": "^9.0.7",
     "browserify-ngannotate": "^0.7.1",
     "del": "^1.1.1",
@@ -18,7 +19,5 @@
     "gulp-cachebust": "0.0.5",
     "gulp-concat": "^2.5.2",
     "gulp-install": "^0.4.0"
-    
   }
-  
 }
