--- a/videoproj/package.json
+++ b/videoproj/package.json
@@ -14,10 +14,18 @@
     "angular-ui-mask": "^1.8.7",
     "browserify": "^9.0.7",
     "browserify-ngannotate": "^0.7.1",
-    "del": "^1.1.1",
+    "del": "^2.2.2",
     "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.5",
     "gulp-cachebust": "0.0.5",
-    "gulp-concat": "^2.5.2",
-    "gulp-install": "^0.4.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-install": "^0.4.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-scss": "^1.4.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "imagemin-pngquant": "^5.0.0"
   }
 }
