--- a/videoproj/package.json
+++ b/videoproj/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "angularvideo app",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server" : "gulp starter"
   },
   "author": "artemderzkiy",
   "license": "ISC",
